# GitRepoTemplate

./: .gitignore  .travis.yml  CMakeLists.txt  CODE_OF_CONDUCT.md  LICENSE  README.md
src/: Example.cpp  Example.h
test/: CMakeLists.txt  ExampleTest.cpp
